--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -97,7 +97,6 @@ set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5518;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5519;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5520;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5522;
-set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5523;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5524;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5525;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5526;
@@ -320,7 +319,6 @@ set_real_ip_from 2620:7:6001::188;
 set_real_ip_from 2620:7:6001::189;
 set_real_ip_from 2620:7:6001::e664;
 set_real_ip_from 2620:7:6001::ffff:c759:e640;
-set_real_ip_from 2620:7:6001::ffff:c759:e641;
 set_real_ip_from 2620:7:6001::ffff:c759:e642;
 set_real_ip_from 2620:7:6001::ffff:c759:e643;
 set_real_ip_from 2620:7:6001::ffff:c759:e644;
@@ -718,6 +716,7 @@ set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
+set_real_ip_from 2a12:3e80:2:29::;
 set_real_ip_from 2a12:5940:13e2::2;
 set_real_ip_from 2a12:5940:144f::2;
 set_real_ip_from 2a12:5940:1733::2;
