--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -97,6 +97,7 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5518;
 allow 2001:67c:6ec:203:218:33ff:fe44:5519;
 allow 2001:67c:6ec:203:218:33ff:fe44:5520;
 allow 2001:67c:6ec:203:218:33ff:fe44:5522;
+allow 2001:67c:6ec:203:218:33ff:fe44:5523;
 allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
@@ -115,7 +116,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
 allow 2001:bf0:666::666;
@@ -301,9 +301,7 @@ allow 2620:7:6001::170;
 allow 2620:7:6001::171;
 allow 2620:7:6001::172;
 allow 2620:7:6001::173;
-allow 2620:7:6001::174;
 allow 2620:7:6001::175;
-allow 2620:7:6001::176;
 allow 2620:7:6001::177;
 allow 2620:7:6001::178;
 allow 2620:7:6001::179;
@@ -313,23 +311,18 @@ allow 2620:7:6001::182;
 allow 2620:7:6001::183;
 allow 2620:7:6001::184;
 allow 2620:7:6001::185;
-allow 2620:7:6001::186;
 allow 2620:7:6001::187;
 allow 2620:7:6001::188;
-allow 2620:7:6001::189;
 allow 2620:7:6001::e664;
 allow 2620:7:6001::ffff:c759:e640;
-allow 2620:7:6001::ffff:c759:e642;
+allow 2620:7:6001::ffff:c759:e641;
 allow 2620:7:6001::ffff:c759:e643;
 allow 2620:7:6001::ffff:c759:e644;
 allow 2620:7:6001::ffff:c759:e645;
 allow 2620:7:6001::ffff:c759:e646;
-allow 2620:7:6001::ffff:c759:e647;
 allow 2620:7:6001::ffff:c759:e648;
 allow 2620:7:6001::ffff:c759:e649;
 allow 2620:7:6001::ffff:c759:e64a;
-allow 2620:7:6001::ffff:c759:e64b;
-allow 2620:7:6001::ffff:c759:e64c;
 allow 2620:7:6001::ffff:c759:e64d;
 allow 2620:7:6001::ffff:c759:e64e;
 allow 2620:7:6001::ffff:c759:e64f;
@@ -506,7 +499,10 @@ allow 2a07:e03:2a::bcde;
 allow 2a0a:4cc0:0:99:c44b:7eff:fe23:de3d;
 allow 2a0a:4cc0:1:101:a463:1eff:fee1:4874;
 allow 2a0a:4cc0:3:c6:887f:3dff:feab:e676;
+allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
+allow 2a0b:f4c0:16c:11::1;
+allow 2a0b:f4c0:16c:12::1;
 allow 2a0b:f4c0:16c:13::1;
 allow 2a0b:f4c0:16c:14::1;
 allow 2a0b:f4c0:16c:15::1;
@@ -514,6 +510,11 @@ allow 2a0b:f4c0:16c:16::1;
 allow 2a0b:f4c0:16c:2::1;
 allow 2a0b:f4c0:16c:3::1;
 allow 2a0b:f4c0:16c:4::1;
+allow 2a0b:f4c0:16c:5::1;
+allow 2a0b:f4c0:16c:6::1;
+allow 2a0b:f4c0:16c:7::1;
+allow 2a0b:f4c0:16c:8::1;
+allow 2a0b:f4c0:16c:9::1;
 allow 2a0b:f4c2::;
 allow 2a0b:f4c2::1;
 allow 2a0b:f4c2::10;
