Update lists at 20240416-0600

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -16,6 +17,7 @@ allow 104.167.242.116;
 allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.1.138;
+allow 104.192.171.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
 allow 104.219.236.100;
@@ -56,6 +58,7 @@ allow 107.189.14.106;
 allow 107.189.14.4;
 allow 107.189.14.43;
 allow 107.189.1.80;
+allow 107.189.1.9;
 allow 107.189.1.96;
 allow 107.189.2.108;
 allow 107.189.28.199;
@@ -115,9 +118,11 @@ allow 114.199.75.111;
 allow 118.163.74.160;
 allow 121.78.28.175;
 allow 123.253.35.32;
+allow 125.212.241.131;
 allow 128.31.0.13;
 allow 130.193.15.186;
 allow 135.125.205.25;
+allow 136.244.111.163;
 allow 137.63.71.51;
 allow 138.59.18.110;
 allow 139.99.172.11;
@@ -125,6 +130,7 @@ allow 141.239.149.94;
 allow 141.98.11.62;
 allow 142.44.234.69;
 allow 143.110.156.176;
+allow 143.42.110.237;
 allow 143.42.199.223;
 allow 144.172.118.4;
 allow 144.172.118.55;
@@ -146,6 +152,7 @@ allow 152.89.233.169;
 allow 155.4.102.252;
 allow 156.146.63.143;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -175,6 +182,7 @@ allow 171.25.193.78;
 allow 171.25.193.79;
 allow 171.25.193.80;
 allow 172.104.182.84;
+allow 172.104.214.41;
 allow 172.232.161.205;
 allow 172.81.131.139;
 allow 172.81.131.156;
@@ -209,13 +217,14 @@ allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.236.247.122;
 allow 178.31.126.6;
+allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
 allow 179.43.159.196;
+allow 179.43.159.197;
 allow 179.43.159.198;
 allow 179.43.159.199;
 allow 179.43.159.200;
-allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.167.205;
 allow 179.43.182.232;
@@ -238,6 +247,7 @@ allow 185.100.87.41;
 allow 185.10.16.41;
 allow 185.106.94.195;
 allow 185.107.70.56;
+allow 185.112.146.168;
 allow 185.113.128.30;
 allow 185.129.61.1;
 allow 185.129.61.10;
@@ -250,12 +260,14 @@ allow 185.129.61.7;
 allow 185.129.61.8;
 allow 185.129.61.9;
 allow 185.129.62.62;
+allow 185.129.62.63;
 allow 185.130.44.108;
 allow 185.130.44.43;
 allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -272,7 +284,6 @@ allow 185.181.61.18;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
-allow 185.193.52.180;
 allow 185.195.237.238;
 allow 185.195.71.10;
 allow 185.195.71.11;
@@ -430,6 +441,7 @@ allow 185.220.101.50;
 allow 185.220.101.51;
 allow 185.220.101.52;
 allow 185.220.101.53;
+allow 185.220.101.54;
 allow 185.220.101.55;
 allow 185.220.101.56;
 allow 185.220.101.57;
@@ -629,7 +641,6 @@ allow 193.218.118.133;
 allow 193.218.118.181;
 allow 193.218.118.182;
 allow 193.218.118.188;
-allow 193.218.118.89;
 allow 193.218.118.91;
 allow 193.233.133.109;
 allow 193.239.232.102;
@@ -654,7 +665,6 @@ allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.80.151.30;
 allow 195.88.74.206;
-allow 198.144.178.163;
 allow 198.167.206.166;
 allow 198.23.133.132;
 allow 198.251.84.163;
@@ -688,6 +698,7 @@ allow 2001:1b60:3:221:3132:102:0:1;
 allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
+allow 200.122.181.2;
 allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
@@ -795,17 +806,20 @@ allow 2001:67c:89c:702:1ce:1ce:babe:6;
 allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
+allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
+allow 2001:bf0:666::666;
 allow 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 allow 202.182.99.129;
 allow 202.61.226.98;
 allow 202.61.252.121;
 allow 202.69.76.36;
 allow 202.94.246.210;
+allow 204.137.14.104;
 allow 204.137.14.105;
 allow 204.137.14.106;
 allow 204.137.14.92;
@@ -830,6 +844,7 @@ allow 204.8.96.113;
 allow 204.8.96.114;
 allow 204.8.96.115;
 allow 204.8.96.116;
+allow 204.8.96.117;
 allow 204.8.96.118;
 allow 204.8.96.119;
 allow 204.8.96.120;
@@ -841,6 +856,7 @@ allow 204.8.96.141;
 allow 204.8.96.142;
 allow 204.8.96.143;
 allow 204.8.96.144;
+allow 204.8.96.145;
 allow 204.8.96.146;
 allow 204.8.96.147;
 allow 204.8.96.148;
@@ -875,10 +891,12 @@ allow 204.8.96.178;
 allow 204.8.96.179;
 allow 204.8.96.180;
 allow 204.8.96.181;
+allow 204.8.96.182;
 allow 204.8.96.183;
 allow 204.8.96.184;
 allow 204.8.96.185;
 allow 204.8.96.187;
+allow 204.8.96.188;
 allow 204.8.96.64;
 allow 204.8.96.65;
 allow 204.8.96.67;
@@ -901,6 +919,7 @@ allow 204.8.96.84;
 allow 204.8.96.85;
 allow 204.8.96.86;
 allow 204.8.96.87;
+allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
 allow 205.185.116.34;
@@ -922,14 +941,18 @@ allow 209.141.54.203;
 allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
+allow 212.21.66.6;
 allow 212.69.167.80;
+allow 212.73.134.204;
 allow 212.95.50.77;
 allow 212.95.52.76;
 allow 213.156.142.30;
 allow 213.252.140.118;
+allow 213.95.149.22;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
+allow 217.12.221.131;
 allow 217.146.2.41;
 allow 23.137.248.100;
 allow 23.137.248.139;
@@ -944,6 +967,7 @@ allow 23.137.253.9;
 allow 23.152.24.77;
 allow 23.154.177.10;
 allow 23.154.177.11;
+allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -953,6 +977,7 @@ allow 23.154.177.18;
 allow 23.154.177.19;
 allow 23.154.177.2;
 allow 23.154.177.20;
+allow 23.154.177.21;
 allow 23.154.177.22;
 allow 23.154.177.23;
 allow 23.154.177.24;
@@ -987,6 +1012,7 @@ allow 2600:3c00:e000:4ee::3;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:91ff:fe24:47be;
+allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
 allow 2602:fc24:11:26c3::1;
@@ -1092,6 +1118,7 @@ allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
 allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
+allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:aa80:0:9::3;
@@ -1118,6 +1145,7 @@ allow 2620:7:6001::113;
 allow 2620:7:6001::114;
 allow 2620:7:6001::115;
 allow 2620:7:6001::116;
+allow 2620:7:6001::117;
 allow 2620:7:6001::118;
 allow 2620:7:6001::119;
 allow 2620:7:6001::120;
@@ -1129,6 +1157,7 @@ allow 2620:7:6001::141;
 allow 2620:7:6001::142;
 allow 2620:7:6001::143;
 allow 2620:7:6001::144;
+allow 2620:7:6001::145;
 allow 2620:7:6001::146;
 allow 2620:7:6001::147;
 allow 2620:7:6001::148;
@@ -1163,10 +1192,12 @@ allow 2620:7:6001::178;
 allow 2620:7:6001::179;
 allow 2620:7:6001::180;
 allow 2620:7:6001::181;
+allow 2620:7:6001::182;
 allow 2620:7:6001::183;
 allow 2620:7:6001::184;
 allow 2620:7:6001::185;
 allow 2620:7:6001::187;
+allow 2620:7:6001::188;
 allow 2620:7:6001::e664;
 allow 2620:7:6001::ffff:c759:e640;
 allow 2620:7:6001::ffff:c759:e641;
@@ -1190,6 +1221,7 @@ allow 2620:7:6001::ffff:c759:e654;
 allow 2620:7:6001::ffff:c759:e655;
 allow 2620:7:6001::ffff:c759:e656;
 allow 2620:7:6001::ffff:c759:e657;
+allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
@@ -1215,6 +1247,7 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7a7:2:3c17:216:3cff:fe40:efc;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
+allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
 allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
@@ -1239,6 +1272,7 @@ allow 2a03:4000:21:115:8837:15ff:fe14:64cc;
 allow 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 allow 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 allow 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
+allow 2a03:4000:28:3e:c4ee:b0ff:fecb:1cde;
 allow 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
@@ -1340,12 +1374,14 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
 allow 2a06:d380:0:103::62;
+allow 2a06:d380:0:103::63;
 allow 2a06:e80:3000:1:bad:babe:ca11:911;
 allow 2a07:e01:2:13::2;
 allow 2a07:e03:2a::bcde;
@@ -1473,6 +1509,7 @@ allow 2a0b:f4c2:2::50;
 allow 2a0b:f4c2:2::51;
 allow 2a0b:f4c2:2::52;
 allow 2a0b:f4c2:2::53;
+allow 2a0b:f4c2:2::54;
 allow 2a0b:f4c2:2::55;
 allow 2a0b:f4c2:2::56;
 allow 2a0b:f4c2:2::57;
@@ -1564,7 +1601,6 @@ allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
-allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1587,7 +1623,6 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
-allow 3.210.117.24;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 3.67.194.114;
@@ -1664,6 +1699,7 @@ allow 45.92.1.74;
 allow 45.94.31.180;
 allow 45.95.169.184;
 allow 45.95.169.223;
+allow 45.95.169.224;
 allow 45.95.169.225;
 allow 45.95.169.226;
 allow 45.95.169.228;
@@ -1702,6 +1738,7 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.204.140.237;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1726,6 +1763,7 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
+allow 5.2.79.179;
 allow 5.2.79.190;
 allow 54.224.79.94;
 allow 5.42.66.6;
@@ -1781,6 +1819,7 @@ allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.118.242.158;
 allow 82.118.242.36;
+allow 82.153.138.119;
 allow 82.153.138.182;
 allow 82.153.138.48;
 allow 82.197.182.161;
@@ -1817,6 +1856,7 @@ allow 89.147.109.226;
 allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.110.200;
+allow 89.147.110.202;
 allow 89.147.110.214;
 allow 89.147.110.82;
 allow 89.147.111.124;
@@ -1833,6 +1873,7 @@ allow 89.58.63.200;
 allow 91.103.253.141;
 allow 91.132.144.59;
 allow 91.139.160.150;
+allow 91.193.18.63;
 allow 91.203.144.194;
 allow 91.203.145.116;
 allow 91.206.26.26;
@@ -1841,6 +1882,8 @@ allow 91.208.75.153;
 allow 91.208.75.156;
 allow 91.208.75.178;
 allow 91.208.75.239;
+allow 91.208.75.3;
+allow 91.208.75.4;
 allow 91.210.59.57;
 allow 91.219.236.101;
 allow 91.219.237.56;
@@ -1857,6 +1900,7 @@ allow 93.95.225.141;
 allow 93.95.228.125;
 allow 93.95.228.205;
 allow 93.95.230.165;
+allow 93.95.230.54;
 allow 93.95.231.14;
 allow 93.95.231.88;
 allow 93.99.104.128;
@@ -1873,6 +1917,7 @@ allow 94.103.124.98;
 allow 94.140.115.63;
 allow 94.142.241.194;
 allow 94.142.244.16;
+allow 94.16.112.22;
 allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.226;
@@ -1892,9 +1937,11 @@ allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.164.4.104;
+allow 95.164.46.204;
 allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
 allow 96.27.198.133;
+allow 96.42.26.63;
 allow 96.66.15.152;
 allow 98.128.173.33;
