--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -112,11 +112,13 @@ deny 2001:67c:89c:702:1ce:1ce:babe:6;
 deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
+deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:9b1:c300:3044::610;
 deny 2001:b030:2422::7234;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
+deny 2001:bf0:666::666;
 deny 2001:df7:7e80:100:9f2b:1d15:c713:52ad;
 deny 2401:c080:2000:111f:5400:4ff:fea3:9c02;
 deny 2402:1f00:8100:400::9;
@@ -124,6 +126,7 @@ deny 2600:3c00:e000:4ee::3;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::3;
 deny 2600:3c03::f03c:91ff:fe24:47be;
+deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::14;
 deny 2602:fc24:11:26c3::1;
@@ -229,6 +232,7 @@ deny 2605:6400:30:f858:2704:73e1:7085:12ef;
 deny 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 deny 2605:6400:30:f8d5::1;
 deny 2605:6400:30:f8da:2b2:a293:30ad:506d;
+deny 2605:6400:30:f920:f523:28ef:3617:8b86;
 deny 2605:6400:40:fe09::2;
 deny 2605:6400:d814:1b8::4;
 deny 2605:aa80:0:9::3;
@@ -255,6 +259,7 @@ deny 2620:7:6001::113;
 deny 2620:7:6001::114;
 deny 2620:7:6001::115;
 deny 2620:7:6001::116;
+deny 2620:7:6001::117;
 deny 2620:7:6001::118;
 deny 2620:7:6001::119;
 deny 2620:7:6001::120;
@@ -266,6 +271,7 @@ deny 2620:7:6001::141;
 deny 2620:7:6001::142;
 deny 2620:7:6001::143;
 deny 2620:7:6001::144;
+deny 2620:7:6001::145;
 deny 2620:7:6001::146;
 deny 2620:7:6001::147;
 deny 2620:7:6001::148;
@@ -300,10 +306,12 @@ deny 2620:7:6001::178;
 deny 2620:7:6001::179;
 deny 2620:7:6001::180;
 deny 2620:7:6001::181;
+deny 2620:7:6001::182;
 deny 2620:7:6001::183;
 deny 2620:7:6001::184;
 deny 2620:7:6001::185;
 deny 2620:7:6001::187;
+deny 2620:7:6001::188;
 deny 2620:7:6001::e664;
 deny 2620:7:6001::ffff:c759:e640;
 deny 2620:7:6001::ffff:c759:e641;
@@ -327,6 +335,7 @@ deny 2620:7:6001::ffff:c759:e654;
 deny 2620:7:6001::ffff:c759:e655;
 deny 2620:7:6001::ffff:c759:e656;
 deny 2620:7:6001::ffff:c759:e657;
+deny 2620:7:6001::ffff:c759:e658;
 deny 2620:7:6001::ffff:c759:e659;
 deny 2620:95:4007::111;
 deny 2800:ba0:6:c1::4858;
@@ -351,6 +360,7 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7a7:2:3c17:216:3cff:fe40:efc;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
+deny 2a01:7e00::f03c:93ff:fef8:bd9b;
 deny 2a01:7e01::f03c:93ff:fef8:bd60;
 deny 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 deny 2a02:13f0:8100:6:688:5fe9:2e1f:1;
@@ -375,6 +385,7 @@ deny 2a03:4000:21:115:8837:15ff:fe14:64cc;
 deny 2a03:4000:21:8a8:dead:beef:ca1f:1337;
 deny 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 deny 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
+deny 2a03:4000:28:3e:c4ee:b0ff:fecb:1cde;
 deny 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 deny 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 deny 2a03:4000:37:3:e842:2ff:feb9:c49c;
@@ -476,12 +487,14 @@ deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
 deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
+deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
 deny 2a06:d380:0:103::62;
+deny 2a06:d380:0:103::63;
 deny 2a06:e80:3000:1:bad:babe:ca11:911;
 deny 2a07:e01:2:13::2;
 deny 2a07:e03:2a::bcde;
@@ -609,6 +622,7 @@ deny 2a0b:f4c2:2::50;
 deny 2a0b:f4c2:2::51;
 deny 2a0b:f4c2:2::52;
 deny 2a0b:f4c2:2::53;
+deny 2a0b:f4c2:2::54;
 deny 2a0b:f4c2:2::55;
 deny 2a0b:f4c2:2::56;
 deny 2a0b:f4c2:2::57;
@@ -700,7 +714,6 @@ deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:9491:941d:caf5:50e7;
-deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
