Update lists at 20240416-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -126,7 +126,6 @@ allow 136.244.111.163;
 allow 137.63.71.51;
 allow 138.59.18.110;
 allow 139.99.172.11;
-allow 141.239.149.94;
 allow 141.98.11.62;
 allow 142.44.234.69;
 allow 143.110.156.176;
@@ -152,7 +151,6 @@ allow 152.89.233.169;
 allow 155.4.102.252;
 allow 156.146.63.143;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -225,6 +223,7 @@ allow 179.43.159.197;
 allow 179.43.159.198;
 allow 179.43.159.199;
 allow 179.43.159.200;
+allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.167.205;
 allow 179.43.182.232;
@@ -249,6 +248,7 @@ allow 185.106.94.195;
 allow 185.107.70.56;
 allow 185.112.146.168;
 allow 185.113.128.30;
+allow 185.126.117.21;
 allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.2;
@@ -277,6 +277,7 @@ allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.165.190.111;
 allow 185.170.114.25;
+allow 185.174.136.114;
 allow 185.181.60.135;
 allow 185.181.61.115;
 allow 185.181.61.142;
@@ -284,6 +285,7 @@ allow 185.181.61.18;
 allow 185.183.157.214;
 allow 185.183.159.40;
 allow 185.191.204.254;
+allow 185.193.52.180;
 allow 185.195.237.238;
 allow 185.195.71.10;
 allow 185.195.71.11;
@@ -641,6 +643,7 @@ allow 193.218.118.133;
 allow 193.218.118.181;
 allow 193.218.118.182;
 allow 193.218.118.188;
+allow 193.218.118.89;
 allow 193.218.118.91;
 allow 193.233.133.109;
 allow 193.239.232.102;
@@ -665,6 +668,7 @@ allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.80.151.30;
 allow 195.88.74.206;
+allow 198.144.178.163;
 allow 198.167.206.166;
 allow 198.23.133.132;
 allow 198.251.84.163;
@@ -1601,6 +1605,7 @@ allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
+allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1678,6 +1683,7 @@ allow 45.151.167.11;
 allow 45.151.167.12;
 allow 45.151.167.13;
 allow 45.15.157.177;
+allow 45.15.158.39;
 allow 45.61.184.47;
 allow 45.61.185.172;
 allow 45.66.35.10;
@@ -1738,7 +1744,6 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.204.140.237;
 allow 5.255.100.219;
 allow 5.255.100.26;
 allow 5.255.101.10;
@@ -1749,7 +1754,6 @@ allow 5.255.111.64;
 allow 5.255.115.42;
 allow 5.255.115.58;
 allow 5.255.117.56;
-allow 5.255.118.244;
 allow 5.255.124.150;
 allow 5.255.125.196;
 allow 5.255.125.41;
@@ -1814,6 +1818,7 @@ allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
+allow 80.78.21.157;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
