--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -714,6 +714,7 @@ allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
 allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
+allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
