Update lists at 20240417-0001

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,4 +1,5 @@
 allow 102.130.113.9;
+allow 102.130.117.167;
 allow 102.219.85.85;
 allow 103.106.228.81;
 allow 103.109.101.105;
@@ -152,6 +153,7 @@ allow 152.89.233.169;
 allow 155.4.102.252;
 allow 156.146.63.143;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.247.72.192;
 allow 162.247.72.199;
 allow 162.247.74.200;
@@ -618,6 +620,7 @@ allow 192.42.116.24;
 allow 192.42.116.25;
 allow 192.42.116.26;
 allow 192.42.116.27;
+allow 192.42.116.28;
 allow 192.46.227.185;
 allow 192.99.168.180;
 allow 193.105.134.150;
@@ -795,6 +798,7 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
+allow 2001:67c:6ec:203:218:33ff:fe44:5528;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
 allow 2001:67c:89c:702:1ce:1ce:babe:2;
@@ -958,11 +962,11 @@ allow 23.137.248.100;
 allow 23.137.248.139;
 allow 23.137.248.152;
 allow 23.137.248.69;
-allow 23.137.249.150;
-allow 23.137.249.227;
 allow 23.137.249.8;
 allow 23.137.250.34;
 allow 23.137.250.83;
+allow 23.137.253.109;
+allow 23.137.253.110;
 allow 23.137.253.9;
 allow 23.152.24.77;
 allow 23.154.177.10;
@@ -991,7 +995,6 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
 allow 23.155.8.104;
-allow 23.184.48.208;
 allow 23.236.122.62;
 allow 23.26.133.239;
 allow 23.94.211.25;
@@ -1017,15 +1020,14 @@ allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
-allow 2602:fc24:11:26c3::1;
-allow 2602:fc24:11:66c4::1;
 allow 2602:fc24:11:aabe::1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
-allow 2602:fc24:18:df04::1;
+allow 2602:fc24:19:1c9::1;
+allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
@@ -1254,6 +1256,7 @@ allow 2a01:7e01::f03c:93ff:fef8:bd60;
 allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
@@ -1710,6 +1713,7 @@ allow 45.95.169.230;
 allow 45.95.169.255;
 allow 45.95.202.48;
 allow 46.166.139.111;
+allow 46.182.21.248;
 allow 46.195.94.228;
 allow 46.226.164.14;
 allow 46.232.251.191;
@@ -1740,7 +1744,6 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
-allow 52.200.77.176;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.101.10;
@@ -1789,6 +1792,7 @@ allow 67.219.109.141;
 allow 71.19.144.106;
 allow 72.14.179.10;
 allow 72.167.47.69;
+allow 72.211.49.235;
 allow 74.207.248.172;
 allow 74.82.47.194;
 allow 77.105.146.42;
@@ -1799,6 +1803,7 @@ allow 77.221.159.192;
 allow 77.221.159.193;
 allow 77.221.159.75;
 allow 77.232.143.248;
+allow 77.238.239.170;
 allow 77.48.28.193;
 allow 77.48.28.236;
 allow 77.48.28.237;
@@ -1895,7 +1900,6 @@ allow 92.119.126.161;
 allow 92.205.129.119;
 allow 92.243.24.163;
 allow 92.246.84.133;
-allow 92.249.48.135;
 allow 93.123.12.112;
 allow 93.90.74.31;
 allow 93.95.225.141;
@@ -1944,5 +1948,6 @@ allow 95.168.173.143;
 allow 95.211.210.103;
 allow 95.211.244.28;
 allow 96.27.198.133;
+allow 96.42.26.63;
 allow 96.66.15.152;
 allow 98.128.173.33;
