--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -100,6 +100,7 @@ allow 2001:67c:6ec:203:218:33ff:fe44:5524;
 allow 2001:67c:6ec:203:218:33ff:fe44:5525;
 allow 2001:67c:6ec:203:218:33ff:fe44:5526;
 allow 2001:67c:6ec:203:218:33ff:fe44:5527;
+allow 2001:67c:6ec:203:218:33ff:fe44:5528;
 allow 2001:67c:89c:702:1ce:1ce:babe:1;
 allow 2001:67c:89c:702:1ce:1ce:babe:10;
 allow 2001:67c:89c:702:1ce:1ce:babe:2;
@@ -128,15 +129,14 @@ allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:f9f3:0:2::14;
-allow 2602:fc24:11:26c3::1;
-allow 2602:fc24:11:66c4::1;
 allow 2602:fc24:11:aabe::1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
-allow 2602:fc24:18:df04::1;
+allow 2602:fc24:19:1c9::1;
+allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:95b7::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
@@ -364,6 +364,7 @@ allow 2a01:7e01::f03c:93ff:fef8:bd60;
 allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 allow 2a02:13f0:8100:6:688:5fe9:2e1f:1;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
