Update lists at 20240417-1201

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -9,6 +9,7 @@ deny 2001:40e8:0:f090::100;
 deny 2001:41d0:1008:20d1::1;
 deny 2001:41d0:2:9161::1;
 deny 2001:41d0:304:200::9dce;
+deny 2001:41d0:401:3200::3efd;
 deny 2001:41d0:404:300::dd2;
 deny 2001:41d0:601:1100::108e;
 deny 2001:41d0:700:10a2::;
@@ -23,6 +24,7 @@ deny 2001:41d0:e:70c::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
 deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
+deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 deny 2001:620:20d0::19;
 deny 2001:620:20d0::20;
 deny 2001:620:20d0::23;
@@ -125,6 +127,7 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::3;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:f9f3:0:2::14;
 deny 2602:fc24:11:aabe::1;
@@ -161,7 +164,6 @@ deny 2605:6400:10:984:41e7:4ad6:a11e:cdcc;
 deny 2605:6400:10:aa1:2db8:1c14:2191:4aa8;
 deny 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 deny 2605:6400:20:104e::2;
-deny 2605:6400:20:170c::1;
 deny 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 deny 2605:6400:20:2417::69;
 deny 2605:6400:20:3ea:c2a3:1162:7224:e5df;
@@ -384,7 +386,6 @@ deny 2a03:4000:27:36:c813:6dff:fe0e:b93e;
 deny 2a03:4000:27:6f8:e466:27ff:fe82:1b2a;
 deny 2a03:4000:28:3e:c4ee:b0ff:fecb:1cde;
 deny 2a03:4000:29:8a9:887f:9eff:feed:9e9;
-deny 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 deny 2a03:4000:37:3:e842:2ff:feb9:c49c;
 deny 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 deny 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
@@ -446,7 +447,6 @@ deny 2a04:52c0:103:412::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:ad97::1;
-deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:82c0::1;
 deny 2a04:52c0:106:394::1;
@@ -485,6 +485,7 @@ deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
 deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
+deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
